Capstone/k8s/router-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  router-deployment
  labels:
    name:  router-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
      - image:  router:latest
        name:  router-service
        resources:
          requests:
            cpu: "200m"
            memory: "250Mi"
          limits:
            cpu: "400m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /api/router/status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/router/status/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
           
        ports:
        - containerPort:  3000
          name:  http
