Capstone/k8s/sandox-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  sandbox-service
spec:
  selector:
    app: sandbox
  type:  ClusterIP 
  
  ports:
  - name:  main-sandbox-port
    port:  80
    targetPort:  3000
